Fix overflowing tag

--- a/src/css/layout.sass
+++ b/src/css/layout.sass
@@ -50,6 +50,10 @@
 .card .level
   align-items: flex-start
 
+.is-tag-catcher
+  overflow: hidden
+  flex-basis: 110px
+
 .is-strong
   font-weight: bold
 
